Added basic layout fr team details

--- a/app/globals.css
+++ b/app/globals.css
@@ -9,6 +9,8 @@
   --color-background: var(--background);
   --color-foreground: var(--foreground);
   --font-mono: var(--font-kode-mono);
+  --font-jura: var(--font-jura);
+  --font-orbitron: var(--font-orbitron);
 }
 
 @media (prefers-color-scheme: dark) {
