--- a/app/globals.css
+++ b/app/globals.css
@@ -22,4 +22,5 @@ body {
   background: var(--background);
   color: var(--foreground);
   font-family: var(--font-kode-mono);
+  min-height: 100%;
 }
