--- a/app/globals.css
+++ b/app/globals.css
@@ -21,8 +21,8 @@
 }
 
 body {
-  background: black;
-  color: white;
+  background: var(--background);
+  color: var(--foreground);
   font-family: var(--font-kode-mono);
   min-height: 100%;
 }
