--- a/app/globals.css
+++ b/app/globals.css
@@ -26,3 +26,11 @@ body {
   font-family: var(--font-kode-mono);
   min-height: 100%;
 }
+
+.no-scrollbar::-webkit-scrollbar {
+  display: none;
+}
+.no-scrollbar {
+  -ms-overflow-style: none;
+  scrollbar-width: none;
+}
